@@ -83,8 +83,35 @@ Skyscraper.SBS.DisableSound = false
 ; SBS camera configuration
 ;
 
+;normal speed multiplier (affects all movement and rotation)
+Skyscraper.SBS.Camera.Speed = 1.0
+
+;fast speed multiplier (enables when you hold the shift key)
+Skyscraper.SBS.Camera.FastSpeed = 2.0
+
+;slow speed multiplier (enables when you hold the CTRL key)
+Skyscraper.SBS.Camera.SlowSpeed = 0.5
+
+;step speed (forward/backward movement)
+Skyscraper.SBS.Camera.StepSpeed = 140.0
+
+;strafe speed (left/right movement)
+Skyscraper.SBS.Camera.StrafeSpeed = 140.0
+
+;float speed (up/down movement)
+Skyscraper.SBS.Camera.FloatSpeed = 140.0
+
+;turn speed (Y axis rotation)
+Skyscraper.SBS.Camera.TurnSpeed = 100.0
+
+;look speed (X axis rotation)
+Skyscraper.SBS.Camera.LookSpeed = 150.0
+
+;spin speed (Z axis rotation)
+Skyscraper.SBS.Camera.SpinSpeed = 150.0
+
 ;initial speed of jumping
-Skyscraper.SBS.Camera.JumpSpeed = 0.08
+Skyscraper.SBS.Camera.JumpSpeed = 8.8
 
 ;walk acceleration
 Skyscraper.SBS.Camera.WalkAccelerate = 0.040
@@ -149,6 +176,9 @@ Skyscraper.SBS.Camera.FreelookSpeed = 200
 
 ;default camera field of view angle
 Skyscraper.SBS.Camera.FOV = 71.263794
+
+;zoom speed (FOV angle change) - this is in degrees per keypress
+Skyscraper.SBS.Camera.ZoomSpeed = 0.2
 
 ;reset camera's onground status on every loop cycle
 Skyscraper.SBS.Camera.ResetOnGround = false
